@@ -1,43 +1,46 @@
 package co.edu.utp.gia.sms.beans;
 
-import java.io.IOException;
-import java.io.OutputStream;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import javax.faces.context.ExternalContext;
-import javax.faces.context.FacesContext;
-import javax.faces.view.ViewScoped;
-import javax.inject.Inject;
-import javax.inject.Named;
-
 import co.edu.utp.gia.sms.beans.util.MessageConstants;
 import co.edu.utp.gia.sms.dtos.ReferenciaDTO;
 import co.edu.utp.gia.sms.exportutil.ReferenceToRIS;
-import co.edu.utp.gia.sms.negocio.ReferenciaEJB;
+import co.edu.utp.gia.sms.negocio.ProcesoService;
+import co.edu.utp.gia.sms.negocio.ReferenciaService;
+import jakarta.faces.context.ExternalContext;
+import jakarta.faces.context.FacesContext;
+import jakarta.faces.view.ViewScoped;
+import jakarta.inject.Inject;
+import jakarta.inject.Named;
 import lombok.Getter;
 import lombok.Setter;
+import lombok.extern.java.Log;
 
+import java.io.IOException;
+import java.io.OutputStream;
+import java.util.List;
+import java.util.logging.Level;
+/**
+ * Clase controladora de interfaz web que se encarga de presentar un resumen de las referencias seleccionadas.
+ *
+ * @author Christian A. Candela <christiancandela@uniquindio.edu.co>
+ * @author Luis E. Sepúlveda R <lesepulveda@uniquindio.edu.co>
+ * @author Grupo de Investigacion en Redes Informacion y Distribucion - GRID
+ * @author Universidad del Quindío
+ * @version 1.0
+ * @since 13/06/2019
+ */
 @Named
 @ViewScoped
+@Log
 public class ResumenReferenciasSeleccionadasBean extends GenericBean<ReferenciaDTO> {
-	/**
-	 * Variable que representa el atributo serialVersionUID de la clase
-	 */
-	private static final long serialVersionUID = -4192800052066233993L;
-	@Getter
-	@Setter
+	@Getter @Setter
 	private List<ReferenciaDTO> referencias;
 	@Inject
-	private ReferenciaEJB referenciaEJB;
-
+	private ReferenciaService referenciaService;
+	@Inject
+	private ProcesoService procesoService;
 
 	public void inicializar() {
-
-		if (getRevision() != null) {
-//			referencias = referenciaEJB.obtenerTodas(getRevision().getId(), 3);
-			referencias = referenciaEJB.obtenerTodas(paso-1);
-		}
+		referencias = referenciaService.findByPaso(getPasoAnterior().getId());
 	}
 	
 	public void exportToRIS() {
@@ -56,8 +59,7 @@ public class ResumenReferenciasSeleccionadasBean extends GenericBean<ReferenciaD
 	    	ReferenceToRIS rtr = new ReferenceToRIS(output);
 	    	rtr.procesarReferencias(referencias);
 		} catch (IOException e) {
-			
-			e.printStackTrace();
+			log.log(Level.ALL,"Error al exportar las referencias",e);
 		}
 	    // Now you can write the InputStream of the file to the above OutputStream the usual way.
 	    // ...
@@ -71,26 +73,26 @@ public class ResumenReferenciasSeleccionadasBean extends GenericBean<ReferenciaD
 		int digitos = 1 + (int)Math.log10( referencias.size() );
 		if( n > 0 ) {
 //			ReferenciaDTO re = referencias.stream().filter( r->r.getSpsid()!=null ).sorted( Comparator.comparing(ReferenciaDTO::getSpsid) ).findFirst().get();
-			ReferenciaDTO re = referencias.stream().filter( r->r.getSpsid()!=null ).sorted( (r1,r2)->r2.getSpsid().compareTo(r1.getSpsid()) ).findFirst().get();
+			ReferenciaDTO re = referencias.stream().filter(r -> r.getSpsid() != null).min((r1, r2) -> r2.getSpsid().compareTo(r1.getSpsid())).get();
 			n = Long.parseLong( re.getSpsid().substring(3) );
 		}
 		
-		for (ReferenciaDTO referencia : referencias.stream().filter(r->r.getSpsid() == null).collect(Collectors.toList())) {
+		for (ReferenciaDTO referencia : referencias.stream().filter(r->r.getSpsid() == null).toList()) {
 			n++;
 			referencia.setSpsid( String.format("SPS%0"+digitos+"d", n));
-			referenciaEJB.actualizarSPS( referencia.getId() , referencia.getSpsid() );
+			referenciaService.updateSPS( referencia.getId() , referencia.getSpsid() );
 		}
 	}
 	
 	public void limpiar() {
 		for (ReferenciaDTO referencia : referencias) {
 			referencia.setSpsid(null);
-			referenciaEJB.actualizarSPS( referencia.getId() , referencia.getSpsid() );
+			referenciaService.updateSPS( referencia.getId() , referencia.getSpsid() );
 		}
 	}
 
 	public void siguientePaso(){
-		referenciaEJB.avanzarReferecias(paso-1);
+		procesoService.avanzarReferecias(getPasoAnterior().getId());
 		mostrarMensajeGeneral(getMessage(MessageConstants.OPERACION_FINALIZADA));
 	}
 }
